--- a/HTML/Page Login/login_page.html
+++ b/HTML/Page Login/login_page.html
@@ -5,6 +5,7 @@
 	<title>Login Page</title>
 </head>
 <body>
+	<div class="wrapper">
 	<div class="imageLeft"></div>
 	<div class="RightBlock">
 		<img src="logotest.png" alt="Image Description">
@@ -19,5 +20,7 @@
   			</form>
   		</div>
     </div>
+</div>
+		<footer>&copy; AJC Formation - LaRuche | Sopra Steria 2023</footer>
 </body>
 </html>
