bug fix + menuRecolteur

--- a/HTML/Menu Recolteur/menuGestionnaire.html
+++ b/HTML/Menu Recolteur/menuGestionnaire.html
@@ -18,7 +18,7 @@
 
 
 <div id="menu">
-        <p>Bienvenue Récolteur</p><br><br>
+        <p>Bienvenue Gestionnaire</p><br><br>
         <nav>
 
 
@@ -44,7 +44,8 @@
                   <input id="menu1" type="checkbox" />
                   <ul class="sub">
                     <li class="sousMenus"><a href="#">Afficher les ruches</a></li>
-                    <li class="sousMenus"><a href="#">Saisir une vulnérabilité</a></li>
+                    <li class="sousMenus"><a href="#">Évaluer le nourrissage</a></li>
+                    <li class="sousMenus"><a href="#">Évaluer les populations</a></li>
                   </ul>
                 </li>
               </ul>
@@ -55,16 +56,22 @@
 
 
             <li>
+              <img src="pot-de-miel.png" alt="logo" class="iconesMenu">
+              <a href="#" class="alignIconeWithText">Les récoltes</a>
+            </li>
+
+
+            <li>
 
               <ul class="accordion">
 
                 <li class="has-sub">
-                  <img src="pot-de-miel.png" alt="logo" class="iconesMenu">
-                  <label for="menu2" class="alignIconeWithText">Mes récoltes &#x25BE;</label>
+                  <img src="apiculteur (3).png" alt="logo" class="iconesMenu">
+                  <label for="menu2" class="alignIconeWithText">Gestion des utilisateurs &#x25BE;</label>
                   <input id="menu2" type="checkbox" />
                   <ul class="sub">
-                    <li class="sousMenus"><a href="#">Afficher les récoltes</a></li>
-                    <li class="sousMenus"><a href="#">Saisir une récolte</a></li>
+                    <li class="sousMenus"><a href="#">Récolteurs</a></li>
+                    <li class="sousMenus"><a href="#">Clients</a></li>
                   </ul>
                   </li>
                 </ul>
