changer couleurs icones

--- a/HTML/Menu Recolteur/menuRecolteur.html
+++ b/HTML/Menu Recolteur/menuRecolteur.html
@@ -24,18 +24,17 @@
 
           <ul>
 
-            <li>
+            <li class="linkAccueil">
               <img src="page-daccueil.png" alt="logo" class="iconesMenu">
               <a href="#" class="alignIconeWithText">Accueil</a>
             </li>
 
-            <li>
+            <li class="linkCompte">
               <img src="iconecompte.png" alt="logo" class="iconesMenu">
               <a href="#" class="alignIconeWithText">Mon compte</a>
             </li>
 
-            <li>
-
+            <li class="linkRuche">
 
               <ul class="accordion">
                 <li class="has-sub">
@@ -49,15 +48,12 @@
                 </li>
               </ul>
 
-
-
             </li>
 
 
-            <li>
+            <li class="linkRecoltes">
 
               <ul class="accordion">
-
                 <li class="has-sub">
                   <img src="pot-de-miel.png" alt="logo" class="iconesMenu">
                   <label for="menu2" class="alignIconeWithText">Mes récoltes &#x25BE;</label>
@@ -70,7 +66,7 @@
                 </ul>
               </li>
 
-              <li>
+              <li class="linkDeco">
                 <img src="les-abeilles.png" alt="logo" class="iconesMenu">
                 <a href="#" class="alignIconeWithText">Déconnexion</a>
               </li>
