--- a/HTML/Liste Recolteurs - Gestionnaire/ListeRecolteursG.html
+++ b/HTML/Liste Recolteurs - Gestionnaire/ListeRecolteursG.html
@@ -10,7 +10,7 @@
   <div class="wrapper">
     <div class="RightBlock">
       <div id="tableau-container">
-        <h1>Liste des Récolteurs</h1>
+        <h1>Mes récolteurs</h1>
         <hr size="2" color=#f6ae2d width="100%"><br>
         <table>
           <thead>
