menus recolteurs/gestionnaires

--- a/HTML/Menu Recolteur/menuGestionnaire.html
+++ b/HTML/Menu Recolteur/menuGestionnaire.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="menuRecolteur.css">
+  <link rel="stylesheet" href="menus.css">
 
 </head>
 
@@ -24,19 +24,19 @@
 
           <ul>
 
-            <li>
+            <li class="linkAccueil">
               <img src="page-daccueil.png" alt="logo" class="iconesMenu">
               <a href="#" class="alignIconeWithText">Accueil</a>
             </li>
 
-            <li>
+            <li class="linkCompte">
               <img src="iconecompte.png" alt="logo" class="iconesMenu">
               <a href="#" class="alignIconeWithText">Mon compte</a>
             </li>
 
-            <li>
 
 
+            <li class="linkRuche">
               <ul class="accordion">
                 <li class="has-sub">
                   <img src="ruche2blanc.png" alt="logo" class="iconesMenu">
@@ -50,18 +50,16 @@
                 </li>
               </ul>
 
-
-
             </li>
 
 
-            <li>
+            <li class="linkRecoltes">
               <img src="pot-de-miel.png" alt="logo" class="iconesMenu">
               <a href="#" class="alignIconeWithText">Les récoltes</a>
             </li>
 
 
-            <li>
+            <li class="linkUtilisateurs">
 
               <ul class="accordion">
 
@@ -77,7 +75,7 @@
                 </ul>
               </li>
 
-              <li>
+              <li class="linkDeco">
                 <img src="les-abeilles.png" alt="logo" class="iconesMenu">
                 <a href="#" class="alignIconeWithText">Déconnexion</a>
               </li>
