--- a/HTML/Menu Gestionnaire/home_page_gestionnaire.html
+++ b/HTML/Menu Gestionnaire/home_page_gestionnaire.html
@@ -5,35 +5,71 @@
 	<title>Home Page Menu gestionnaire</title>
 </head>
 <body>
-
 	<div class="wrapper">
 
 
-	<div class="menu"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+	<div class="menu"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</div>
 
 
 	<div class="body_page">
 
-    <div class="home_message_top">
-      <div class="home_box_message">
-    <h2>Bienvenue sur votre application un-bee-livable !</h2>
-    <div class="alert_message">
-           <h2>alert</h2></div>
-           <div class="buttons">
-    <button>Button 1</button><br>
-    <button>Button 2</button>
+		<div class="home_message_top">
+
+		<div class="home_box_message">
+	  <h2>Bienvenue sur votre application un-bee-livable !</h2>
+
+		<div class="message_content">
+  <div class="top">
+    <a href=""><img src="mise-en-garde.png" class="icon">Vous avez 2 vulnérabilités en cours</a><br>
+		<a href="" class="button-link">Voir mes vulnérabilités</a>
   </div>
-    </div>
-  </div>
-
-
-
-  <div class="home_button_bot">
-
-
+  <div class="bot">
+		<p>Toutes vos ruches sont nourries</p>
+		<a href="" class="button-link">Voir mes ruches	</a>
   </div>
 </div>
 
+		</div>
+	</div>
+
+
+
+	<div class="home_button_bot">
+
+
+		<div class="box-container">
+			<div class="box">
+				<img src="pot-de-miel lapislazuli.png">
+			</div>
+			<a href="" class="button-link" id ="button_bot">Voir mes ruches</a>
+		</div>
+
+		<div class="box-container">
+			<div class="box">
+				<img src="ruche2lapislazuli.png">
+			</div>
+			<a href="" class="button-link" id ="button_bot">Voir mes productions</a>
+
+		</div>
+
+		<div class="box-container">
+			<div class="box">
+				<img src="apiculteurlapislazuli.png">
+			</div>
+			<a href="" class="button-link" id ="button_bot">Gérer les utilisateurs</a>
+		</div>
+
+
+	</div>
+
+
+
+
+
+
+</div>
+</div>
 
 		<footer>&copy; AJC Formation - LaRuche | Sopra Steria 2023</footer>
 </body>
