Liste Mes Ruches : ajout nourrissage + modif

--- a/HTML/Liste Ruches/ListeRuches.html
+++ b/HTML/Liste Ruches/ListeRuches.html
@@ -21,6 +21,7 @@
               <th width="12%">Récolteur id</th>
               <th width="12%">Vulnérabilité</th>
               <th width="12%">Division</th>
+              <th width="12%">Nourrissage</th>
               <th></th>
             </tr>
           </thead>
@@ -31,9 +32,9 @@
               <td>5</td>
               <td>1</td>
               <td>Pesticides</td>
-              <td><img src="marque-de-croix.png" alt="logo" width=30%></td>
+              <td>En attente</td>
+              <td>En attente</td>
               <td>
-                <button class="edit-btn">Modifier</button>
                 <button class="delete-btn">Supprimer</button>
               </td>
             </tr>
@@ -43,21 +44,21 @@
               <td>2</td>
               <td>2</td>
               <td>Loques</td>
-              <td><img src="marque-de-croix.png" alt="logo" width=30%></td>
+              <td>En attente</td>
+              <td></td>
               <td>
-                <button class="edit-btn">Modifier</button>
                 <button class="delete-btn">Supprimer</button>
               </td>
             </tr>
             <tr>
-              <td></td>
+              <td><img src="avertissement.png" alt="logo" width=30%></td>
               <td>4</td>
               <td>2</td>
               <td>2</td>
               <td></td>
-              <td><img src="approbation.png" alt="logo" width=30%></td>
+              <td></td>
+              <td>En attente</td>
               <td>
-                <button class="edit-btn">Modifier</button>
                 <button class="delete-btn">Supprimer</button>
               </td>
             </tr>
