--- a/HTML/home Gestionnaire/home_page_gestionnaire.html
+++ b/HTML/home Gestionnaire/home_page_gestionnaire.html
@@ -17,21 +17,27 @@
 		<div class="home_message_top">
 
 		<div class="home_box_message">
-	  <h2>Bienvenue sur votre application un-bee-livable !</h2>
-
-		<div class="message_content">
-  <div class="top">
-    <a href=""><img src="mise-en-garde.png" class="icon">Vous avez 2 vulnérabilités en cours</a><br>
-		<a href="" class="button-link">Voir mes vulnérabilités</a>
-  </div>
-  <div class="bot">
-		<p>Toutes vos ruches sont nourries</p>
-		<a href="" class="button-link">Voir mes ruches	</a>
-  </div>
-</div>
-
-		</div>
-	</div>
+			<h2>Bienvenue sur votre application un-bee-livable !</h2>
+							<div class="message_content">
+								<div class="top">
+									<div class="left">
+										<a href=""><img src="mise-en-garde.png" class="icon">Vous avez 2 vulnérabilités en cours</a>
+									</div>
+									<div class="right">
+											<button>Voir mes vulnérabilités</button>
+									</div>
+								</div>
+								<div class="bot">
+									<div class="left">
+										<p>Toutes vos ruches sont nourries</p>
+									</div>
+									<div class="right">
+										<button>Voir mes ruches</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
 
 
@@ -39,34 +45,30 @@
 
 
 		<div class="box-container">
-			<div class="box">
-				<img src="pot-de-miel lapislazuli.png">
-			</div>
-			<a href="" class="button-link" id ="button_bot">Voir mes ruches</a>
+			<a href=""  class="img_box">
+  			<img src="pot-de-miel lapislazuli.png">
+			</a>
+			<button id ="button_bot">Voir mes ruches</button>
 		</div>
 
 		<div class="box-container">
-			<div class="box">
+				<a href="" class="img_box">
 				<img src="ruche2lapislazuli.png">
-			</div>
-			<a href="" class="button-link" id ="button_bot">Voir mes productions</a>
+			</a>
+			<button id ="button_bot">Voir mes productions</button>
 
 		</div>
 
 		<div class="box-container">
-			<div class="box">
+			<a href="" class="img_box">
+
 				<img src="apiculteurlapislazuli.png">
-			</div>
-			<a href="" class="button-link" id ="button_bot">Gérer les utilisateurs</a>
+			</a>
+			<button id ="button_bot">Gérer les utilisateurs</button>
 		</div>
 
 
 	</div>
-
-
-
-
-
 
 </div>
 </div>
